// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group Test Renders the radio group component 1`] = `
.c4 {
  margin-left: 5px;
  display: inline-block;
}

.c2 {
  color: #006EF5;
  font-size: 15px;
}

.c2 svg {
  width: 15px;
  top: 2px;
  position: relative;
}

.c1 {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.c3 {
  width: 1em;
  height: 1em;
}

.c0 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <label>
      <input
        checked=""
        class="c1"
        id="1"
        tabindex="-1"
        type="radio"
        value="Radio 1"
      />
      <span
        aria-checked="true"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-1"
          class="c3  radio-checked"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Zm0,8c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-1"
      >
        Radio 1
      </span>
    </label>
  </div>
  <div
    class="c0"
  >
    <label>
      <input
        class="c1"
        id="2"
        tabindex="-1"
        type="radio"
        value="Radio 2"
      />
      <span
        aria-checked="false"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-2"
          class="c3  radio"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-2"
      >
        Radio 2
      </span>
    </label>
  </div>
  <div
    class="c0"
  >
    <label>
      <input
        class="c1"
        id="3"
        tabindex="-1"
        type="radio"
        value="Radio 3"
      />
      <span
        aria-checked="false"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-3"
          class="c3  radio"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-3"
      >
        Radio 3
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Group Test Renders the radio group component inline 1`] = `
.c4 {
  margin-left: 5px;
  display: inline-block;
}

.c2 {
  color: #006EF5;
  font-size: 15px;
}

.c2 svg {
  width: 15px;
  top: 2px;
  position: relative;
}

.c1 {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.c3 {
  width: 1em;
  height: 1em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  display: inline-block;
  margin-right: 10px;
}

<div>
  <div
    class="c0"
  >
    <label>
      <input
        checked=""
        class="c1"
        id="1"
        tabindex="-1"
        type="radio"
        value="Radio 1"
      />
      <span
        aria-checked="true"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-1"
          class="c3  radio-checked"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Zm0,8c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-1"
      >
        Radio 1
      </span>
    </label>
  </div>
  <div
    class="c0"
  >
    <label>
      <input
        class="c1"
        id="2"
        tabindex="-1"
        type="radio"
        value="Radio 2"
      />
      <span
        aria-checked="false"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-2"
          class="c3  radio"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-2"
      >
        Radio 2
      </span>
    </label>
  </div>
  <div
    class="c0"
  >
    <label>
      <input
        class="c1"
        id="3"
        tabindex="-1"
        type="radio"
        value="Radio 3"
      />
      <span
        aria-checked="false"
        class="c2"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-labelledby="labelfor-3"
          class="c3  radio"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24,0c13.246,0 24,10.754 24,24c0,13.246 -10.754,24 -24,24c-13.246,0 -24,-10.754 -24,-24c0,-13.246 10.754,-24 24,-24Zm0,8c8.831,0 16,7.169 16,16c0,8.831 -7.169,16 -16,16c-8.831,0 -16,-7.169 -16,-16c0,-8.831 7.169,-16 16,-16Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c4"
        id="labelfor-3"
      >
        Radio 3
      </span>
    </label>
  </div>
</div>
`;
